--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
                 <div class="input-row">
                     <div class="input-group">
                         <label>Email</label>
-                        <input type="email" placeholder="500082398@upes.ac.in">
+                        <input type="email" placeholder="aarambhkhandoori2702@gmail.com">
                     </div>
 
                     <div class="input-group">
@@ -51,12 +51,12 @@
                 <table>
                     <tr>
                         <td>Email</td>
-                        <td>pradipshantanu@gmail.com</td>
+                        <td>aarambhkhandoori2702@gmail.com</td>
                     </tr>
 
                     <tr>
                         <td>Phone</td>
-                        <td>+91 9897810305</td>
+                        <td>+91 8534010680</td>
                     </tr>
 
                     <tr>
